syntax = "proto3";

package go.micro.srv.platform.test;

service PlatformTest {
    rpc GetHealth(GetHealthRequest) returns(GetHealthResponse) {}
}

message GetHealthRequest{}

message GetHealthResponse{
    HealthStatus auth = 1;
    HealthStatus broker = 2;
    HealthStatus config = 3;
    HealthStatus registry = 4;
    HealthStatus runtime = 5;
    HealthStatus store = 6;
}

enum HealthStatus {
    UNKNOWN = 0;
    HEALTHY = 1;
    UNHEALTHY = 2;
}